update database resource follow option, option group, merge option